--- a/style/style.css
+++ b/style/style.css
@@ -85,7 +85,7 @@ footer{
 .boton{
     font-size: 20px;
     font-weight: bold;
-    background: #9ac1f0; 
+    background: #2e8cff; 
     padding-top: 10px;
     padding-bottom: 10px;
     display: inline-block;
@@ -112,4 +112,51 @@ footer{
     transition: all 0.35s;
   }
 
-    
+/* - - - info patentes - - - */
+
+.titulo{
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 35px;
+}
+
+.imagen{
+    margin-top: 10px;
+    margin-bottom: 5px;
+    padding: 50px;
+}
+
+.imagen img{
+    width: 100%;
+    height: 60%;
+    object-fit: cover;
+}
+
+
+/* - - - CONDUCIR MEJOR - - - */
+article{
+    text-align:left;
+}
+
+article li {
+    font-size: 16px;
+    line-height: 24px;
+    margin-top: 15px;
+}
+
+article p {
+    line-height: 1.6;
+    margin-top: 24px;
+}
+
+.video{
+    display: flex;
+    justify-content: center;
+}
+
+/* - - - LEYES - - - */
+
+.alin-img {
+    display: inline-grid;
+    justify-items: center;
+}
