--- a/style/style.css
+++ b/style/style.css
@@ -85,7 +85,7 @@ footer{
 .boton{
     font-size: 20px;
     font-weight: bold;
-    background: #2e8cff; 
+    background: #9ac1f0;; 
     padding-top: 10px;
     padding-bottom: 10px;
     display: inline-block;
