--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,12 @@
 
-
-/*  - - -  NAV - - - */
 body{
     background: #e1ebe4;
+}
+
+/*  - - -  NAV - - - */
+
+.navbar-brand{
+    font-family: 'Russo One', sans-serif;
 }
 
 .logo{
@@ -52,15 +56,13 @@ footer{
 
 
 .titulo-consultacar{
-    color: #0f0f0f;
     display:block;
     padding: 35px 15px;
 }
 
 
 .titulo-consultacar h1{
-    font-weight: bold;
-
+    font-family: 'Russo One', sans-serif;
     text-align: center; 
     text-shadow: -10px 10px 10px #e6dfdf ; 
 }
@@ -133,7 +135,7 @@ footer{
 }
 
 
-/* - - - CONDUCIR MEJOR - - - */
+/* - - - Documentacion Obligatoria - - - */
 article{
     text-align:left;
 }
@@ -156,7 +158,51 @@ article p {
 
 /* - - - LEYES - - - */
 
-.alin-img {
-    display: inline-grid;
-    justify-items: center;
+.contenedor-card{
+    margin: 5%;
+}
+
+
+/* - - - CONDUCTOR PRUDENTE - - -*/
+
+#grilla{
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-template-rows: repeat(2,1fr);
+    margin-bottom: 30px;
+    
+    
+}
+
+.grid-item{
+    margin: 10px;
+}
+
+.centrar-video > iframe{
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    
+}
+
+#video1{
+    grid-column: 1/4;
+    grid-row: 1;
+}
+
+#video2{
+    grid-column: 4/7;
+    grid-row: 1;
+}
+#video3{
+    grid-column: 1/3;
+    grid-row: 2;
+}
+#video4{
+    grid-column: 3/5;
+    grid-row: 2;
+}
+#video5{
+    grid-column: 5/7;
+    grid-row: 2;
 }
